--- a/app/src/main/res/drawable/ic_add.xml
+++ b/app/src/main/res/drawable/ic_add.xml
@@ -5,8 +5,15 @@
     android:viewportHeight="24"
     android:viewportWidth="24">
     <path
-        android:pathData="M0,12L24,12M12,0L12,24"
-        android:strokeWidth="3"
+        android:pathData="
+            M 2 12
+            h 20
+            M 12 2
+            v 20
+        "
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
         android:fillColor="#00000000"
-        android:strokeColor="#000000"/>
+        android:strokeColor="#000000"
+    />
 </vector>
