--- a/app/src/main/res/drawable/ic_verify.xml
+++ b/app/src/main/res/drawable/ic_verify.xml
@@ -1,8 +1,30 @@
-<vector android:autoMirrored="true" android:height="23.92381dp"
-    android:viewportHeight="314" android:viewportWidth="315"
-    android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#000000"
-        android:pathData="M158,36.5l0,34.4 -67.2,0.3 -67.3,0.3 -5,2.3c-6,2.7 -11.8,8.2 -14.8,13.7 -2.2,4 -2.2,4.5 -2.5,67.4 -0.3,71.9 -0.5,69.6 7.5,78.2 2.4,2.6 6.7,5.7 9.6,7l5.2,2.4 67.3,0.3 67.2,0.3 0,34.4c0,19 0.3,34.5 0.8,34.5 0.4,-0 35.6,-34.9 78.2,-77.5l77.5,-77.5 -77.5,-77.5c-42.6,-42.6 -77.8,-77.5 -78.2,-77.5 -0.5,-0 -0.8,15.5 -0.8,34.5zM232.1,201.4c-24.5,24.5 -44.8,44.3 -45.3,44 -0.4,-0.3 -0.8,-7.2 -0.8,-15.5l0,-14.9 -78.5,-0 -78.5,-0 0,-58 0,-58 78.5,-0 78.5,-0 0,-14.8c0,-8.2 0.3,-15.2 0.7,-15.6 0.4,-0.4 20.8,19.4 45.3,43.9l44.5,44.5 -44.4,44.4z" android:strokeColor="#00000000"/>
-    <path android:fillColor="#000000"
-        android:pathData="M142.3,139.2l-27.3,27.3 -12.8,-12.8 -12.7,-12.7 -9.5,9.5 -9.5,9.5 22.3,22.3 22.2,22.2 36.7,-36.7 36.8,-36.8 -9.5,-9.5 -9.5,-9.5 -27.2,27.2z" android:strokeColor="#00000000"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="23.92381dp"
+    android:width="24dp"
+    android:viewportHeight="24"
+    android:viewportWidth="24">
+
+    <path
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:pathData="
+            M 3 17
+            v -10
+            h 10
+            v -5
+            l 10 10
+            l -10 10
+            v -5
+            z
+
+            M 9 12
+            l 2 2
+            l 4 -4
+        "
+        />
+
 </vector>
