--- a/app/src/main/res/drawable/ic_cross.xml
+++ b/app/src/main/res/drawable/ic_cross.xml
@@ -3,9 +3,16 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
-  <path
-      android:pathData="M2,2L22,22M22,2L2,22"
-      android:strokeWidth="3"
-      android:fillColor="#00000000"
-      android:strokeColor="#000000"/>
+    <path
+        android:pathData="
+            M 4 4
+            l 16 16
+            M 20 4
+            l -16, 16
+        "
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+    />
 </vector>
