--- a/app/src/main/res/drawable/ic_paste.xml
+++ b/app/src/main/res/drawable/ic_paste.xml
@@ -1,4 +1,29 @@
-<vector android:height="24dp" android:viewportHeight="469.333"
-    android:viewportWidth="469.333" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#FF000000" android:pathData="M384,42.667h-89.28C285.973,17.92 262.507,0 234.667,0s-51.307,17.92 -60.053,42.667h-89.28c-23.573,0 -42.667,19.093 -42.667,42.667v341.333c0,23.573 19.093,42.667 42.667,42.667H384c23.573,0 42.667,-19.093 42.667,-42.667V85.333C426.667,61.76 407.573,42.667 384,42.667zM234.667,42.667C246.4,42.667 256,52.16 256,64s-9.6,21.333 -21.333,21.333S213.333,75.84 213.333,64S222.933,42.667 234.667,42.667zM384,426.667H85.333V85.333H128v64h213.333v-64H384V426.667z"/>
+<vector
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:height="24dp"
+    android:width="24dp"
+    android:viewportHeight="24"
+    android:viewportWidth="24">
+
+    <path
+        android:strokeWidth="2"
+        android:strokeLineCap="round"
+        android:strokeLineJoin="round"
+        android:fillColor="#00000000"
+        android:strokeColor="#000000"
+        android:pathData="
+            M 5 4
+            h 14
+            v 18
+            h -14
+            Z
+
+            M 10 4
+            a 2 2 0 0 1 4 0
+            v 2
+            h -4
+            z
+        "
+    />
+
 </vector>
