--- a/app/src/main/res/drawable/ic_weight.xml
+++ b/app/src/main/res/drawable/ic_weight.xml
@@ -5,6 +5,21 @@
     android:viewportHeight="24"
     android:viewportWidth="24">
 
+    <group
+        android:name="scalepan"
+        android:translateX="2"
+        android:translateY="2">
+
+        <path
+            android:strokeWidth="2"
+            android:strokeLineCap="round"
+            android:strokeLineJoin="round"
+            android:fillColor="#00000000"
+            android:strokeColor="#000000"
+            android:pathData="a 20 17 0 0 0 20 0"/>
+
+    </group>
+
     <path
         android:strokeWidth="2"
         android:strokeLineCap="round"
@@ -12,10 +27,7 @@
         android:fillColor="#00000000"
         android:strokeColor="#000000"
         android:pathData="
-            M 2 2
-            a 20 17 0 0 0 20 0
-
-            m -18 5
+            M 4 7
             h 16
             l 2 16
             h -20
@@ -23,9 +35,23 @@
 
             m 3 8
             a 5 5 0 1 1 0 0.001
-            m 5 0
-            l 2 2
         "
         />
+
+    <group
+        android:name="tick"
+        android:translateX="12"
+        android:translateY="15">
+
+        <path
+            android:strokeWidth="2"
+            android:strokeLineCap="round"
+            android:strokeLineJoin="round"
+            android:fillColor="#00000000"
+            android:strokeColor="#000000"
+            android:pathData="l 2 2"
+        />
+
+    </group>
 
 </vector>
