--- a/app/src/main/res/layout/activity_verify.xml
+++ b/app/src/main/res/layout/activity_verify.xml
@@ -49,7 +49,7 @@
             android:text="@string/zero" />
 
         <TextView
-            android:id="@+id/tv_summary_error"
+            android:id="@+id/tv_summary_discrepancy"
             style="@style/tv_base"
             android:layout_weight="1"
             android:textColor="@color/correct"
@@ -78,7 +78,7 @@
 <!--        />-->
 
         <ImageButton
-            android:id="@+id/btn_copy"
+            android:id="@+id/ib_copy"
             android:src="@drawable/ic_copy"
             android:contentDescription="@string/copy"
             style="@style/ib_icon"
