--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -14,7 +14,7 @@
     </style>
 
     <style name="ib_icon" parent="linear_child">
-        <item name="android:background">@null</item>
+        <item name="android:background">@android:color/transparent</item>
         <item name="android:padding">@dimen/small_margin</item>
         <item name="android:layout_weight">1</item>
     </style>
