--- a/app/src/main/res/drawable/ic_cross.xml
+++ b/app/src/main/res/drawable/ic_cross.xml
@@ -12,6 +12,7 @@
         "
         android:strokeWidth="2"
         android:strokeLineCap="round"
+        android:strokeLineJoin="round"
         android:fillColor="#00000000"
         android:strokeColor="#000000"
     />
