--- a/app/src/main/res/layout/market_item.xml
+++ b/app/src/main/res/layout/market_item.xml
@@ -47,9 +47,10 @@
     />
 
     <TextView
+        style="@style/tv_divider"
         android:id="@+id/tv_asterisk"
         android:text="@string/asterisk"
-        style="@style/tv_divider"
+        android:visibility="gone"
     />
 
     <EditText
@@ -58,27 +59,31 @@
         android:layout_weight="0.8"
         android:hint="@string/zero"
         android:importantForAutofill="no"
+        android:visibility="gone"
         tools:text="10"
     />
 
     <TextView
+        style="@style/tv_divider"
         android:id="@+id/tv_equals"
         android:text="@string/equals"
-        style="@style/tv_divider"
+        android:visibility="gone"
     />
 
     <EditText
-        android:id="@+id/et_cost"
         style="@style/et_number"
+        android:id="@+id/et_cost"
         android:layout_weight="0.8"
         android:hint="@string/zero"
         android:importantForAutofill="no"
+        android:visibility="gone"
         tools:text="100"
     />
 
     <View
         android:id="@+id/v_divider"
         style="@style/tv_divider"
+        android:visibility="gone"
     />
 
     <TextView
@@ -87,6 +92,7 @@
         android:text="@string/zero"
         android:textColor="@color/correct"
         android:layout_weight="0.8"
+        android:visibility="gone"
     />
 
 </LinearLayout>
