--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -28,7 +28,7 @@
     <style name="et_base" parent="tv_base">
         <item name="android:imeOptions">actionNext</item>
         <item name="android:background">@null</item>
-        <item name="android:inputType">text</item>
+        <item name="android:inputType">textNoSuggestions</item>
         <item name="android:gravity">left|start</item>
     </style>
 
